# neoway

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.c3278e8  Makefile  actions.c  actions.h  adb.c  adb.h  at_commands.c  at_commands.h  config.h  configfile.c  configfile.h  data.c  data.h  dist.py  example.py  m  main.c  main.h  modem.c  modem.h  neoway  neoway_tests.c  neowayhelper.conf  nmea.h  nmea_parse.c  post-connect.sh  send_at.c  send_at.h  sms.c  sms.h  thread_funcs.c  thread_funcs.h  uart.c  uart.h  upvs.c  upvs.h  utils.c  utils.h  (+2 more)
RelAx/: THREAD_TEST.c
RelAx/Web_docs/css/: Keyboard.css  picnic.css
RelAx/Web_docs/html/: 404.html  blocked.html
RelAx/Web_docs/index/: index.html  indexWeb.html  indexWebViewer.html  picnic.css
RelAx/Web_docs/js/: Keyboard.js  login.js  login.js~
lib/: xmlparse.c
startup/: ethup.c  ethup.sh  neowayhelper
supervisor/ISTK_rev2_v0.2/: .mxproject  ISTK_rev2.ioc  lsm6ds3_pooling.c  lsm6ds3_pooling.h
supervisor/ISTK_rev2_v0.2/Inc/: N720.h  bq24296.h  eeprom(old).h  eeprom.h  epoch_converter.h  gps_greatcircle.h  indication.h  lsm6ds3_int.h  lsm6ds3_pooling.h  lsm6ds3tr_c_reg(old).h  lsm6dsl(old).h  main.h  main_task.h  nmea_parser.h  service_parser.h  stm32l0xx_it.h  uart.h  wdt.h
supervisor/ISTK_rev2_v0.2/MDK-ARM/: ISTK_rev2.uvguix.temp_user  ISTK_rev2.uvoptx  ISTK_rev2.uvprojx  epoch_converter.c  startup_stm32l053xx.lst  startup_stm32l053xx.s
supervisor/ISTK_rev2_v0.2/MDK-ARM/ISTK_rev2/: ISTK_rev2.axf  ISTK_rev2.build_log.htm  ISTK_rev2.hex  ISTK_rev2.htm  ISTK_rev2.lnp  ISTK_rev2.map  ISTK_rev2_ISTK_rev2.dep  bq24296.crf  bq24296.d  eeprom.crf  eeprom.d  epoch_converter.crf  epoch_converter.d  gps_greatcircle.crf  gps_greatcircle.d  indication.crf  indication.d  lsm.crf  lsm.d  lsm6ds3.crf  lsm6ds3.d  lsm6ds3_pooling.crf  lsm6ds3_pooling.d  lsm6ds3_reg.crf  lsm6ds3_reg.d  lsm6ds3tr_c_reg.crf  lsm6ds3tr_c_reg.d  lsm6dsl.crf  lsm6dsl.d  lsm6dsl_reg.crf  lsm6dsl_reg.d  main.crf  main.d  main_task.crf  main_task.d  n720.crf  n720.d  nmea_parser.crf  nmea_parser.d  service_parser.crf  (+47 more)
supervisor/ISTK_rev2_v0.2/MDK-ARM/RTE/_ISTK_rev2/: RTE_Components.h
supervisor/ISTK_rev2_v0.2/Src/: N720.c  bq24296.c  eeprom(old).c  eeprom.c  gps_greatcircle.c  indication.c  lsm6ds3_int.c  lsm6ds3_pooling.c  lsm6dsl(old).c  main.c  main_task.c  nmea_parser.c  service_parser.c  socket.c  stm32l0xx_hal_msp.c  stm32l0xx_it.c  uart.c  waypoints.c  wdt.c
tests/: bsn-ksc.sh
xml/: config.xml  gprs.xml  gpsglonass.xml  info.xml  info2.xml  queryvariable.xml  routing.xml  sms.xml  web.xml
